Version 6.2.8 (6.2.4 ff): [NEW] Commands: BACKUP/RESTORE/SHOW BACKUPS [NEW] Setup: Installer, Windows Service [ADD] GUI: TreeView [ADD] API: query iterator [ADD] XQuery: GROUP BY, incl. ORDER clauses [ADD] XQuery: line/col information for runtime errors [ADD] XQuery: file library [ADD] XQuery: test for XQuery 1.1 features [MOD] XQuery: doc() now creates main-memory instances; Prop.FORCECREATE forces database instances [MOD] XQuery: improved constant folding [MOD] XQuery: Value/Item types separated [MOD] XQuery: Numerous query optimizations [FIX] Storage: OutOfBounds exception, caused by TableOutput [FIX] XQuery: namespaces, in-scope-prefixes(), ... [FIX] XQuery: lang(), translate(), analyze-string(), ...
Latest:
- static Main methods moved to Util class